--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/SylarLong/iztro-docs#readme",
   "devDependencies": {
+    "fs-extra": "^11.1.1",
+    "vite": "^4.4.9",
     "vitepress": "^1.0.0-rc.4",
     "vitepress-plugin-tabs": "^0.3.0"
   }
