--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,8 +41,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: github-pages # 确保工件名称为 github-pages
-          path: './docs'
+          path: '.'
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
