--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: './docs'
+          path: docs
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
