--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,8 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
-
+      - name: Clean folder
+        run: rm -rf *
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
